[package]
name = "days_12_and_on"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
rayon = "1.7.0"
regex = "1.8.4"
serde = "1.0.163"
serde_json = "1.0.96"
